增加租用界面的项目同步功能
